kubernetes/backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-freestyle  
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-freestyle
  template:
    metadata:
      labels:
        app: backend-freestyle
    spec:
      containers:
      - name: backend-freestyle
        image: 727646485811.dkr.ecr.eu-central-1.amazonaws.com/freestyle-project/server:1.3
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m" # 1 max
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /health-check
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /health-check
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 5
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  type: ClusterIP
  selector:
    app: backend-freestyle
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
