kubernetes/mongo-deploy.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo-sfs
spec:
  selector:
    matchLabels:
      app: mongo
  serviceName: mongo-svc
  replicas: 1
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo:6.0
        resources:
          limits:
            memory: "700Mi"
            cpu: "750m"
        ports:
        - containerPort: 27017
        livenessProbe:
          exec:
            command:
              - mongosh
              - --eval
              - "db.runCommand({ ping: 1 })"
          initialDelaySeconds: 10
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          exec:
            command:
              - mongosh
              - --eval
              - "db.runCommand({ ping: 1 })"
          initialDelaySeconds: 30
          periodSeconds: 5
          failureThreshold: 3
        volumeMounts: 
          - name: mongo-storage
            mountPath: /data/db
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-svc
spec:
  clusterIP: none
  selector:
    app: mongo
  ports:
  - port: 27017
    targetPort: 27017
