kubernetes/nginx-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-freestyle
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-freestyle
  template:
    metadata:
      labels:
        app: nginx-freestyle
    spec:
      containers:
      - name: nginx-freestyle
        image: 727646485811.dkr.ecr.eu-central-1.amazonaws.com/freestyle-project/nginx:1.4
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi" # 1GB
            cpu: "500m"
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 5
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  type: ClusterIP
  selector:
    app: nginx-freestyle
  ports:
  - port: 80
    targetPort: 80
